admin register completed
