# src/main/java/com/app/cv/model/Admin.java
@@ -1,8 +1,13 @@
 package com.app.cv.model;
+import java.time.LocalDateTime;
 
+import com.app.cv.common.classes.UserRole;
 import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import lombok.*;
+
+import org.springframework.data.annotation.CreatedDate;
 import org.springframework.data.annotation.Id;
+import org.springframework.data.annotation.LastModifiedDate;
 import org.springframework.data.mongodb.core.mapping.Document;
 
 @Data
@@ -12,13 +17,15 @@ import org.springframework.data.mongodb.core.mapping.Document;
 @EqualsAndHashCode(exclude = "id") // Exclude id field from equals and hashCode methods for better performance.
 @JsonIgnoreProperties(ignoreUnknown = true) // Ignore any unknown properties during JSON parsing.
 @Document(collection = "admin")
-public class
-Admin {
-
+public class Admin {
     @Id
     private String id;
-    private String name;
     private String email;
-    private String password;
     private String mobile;
+    private UserRole userRole;
+    @CreatedDate
+    private LocalDateTime  createdAt;
+
+    @LastModifiedDate
+    private LocalDateTime  modifiedAt;
 }
